fix header z-index issue fixed the cropper background overlapping issue

--- a/plugins/front-cropper/assets/css/fc-style.css
+++ b/plugins/front-cropper/assets/css/fc-style.css
@@ -4,6 +4,7 @@
 .cropper-container, #cropper-image {max-width: 100%;margin: 0 0 15px;max-height: 550px;}
 
 /* cropper */
+#cropper-board .cropper-bg{overflow:hidden;}
 #cropper-board .bm-adjust-crop-actions{position:absolute;left:40px;top:40px;background-color:rgb(0 0 0 / 50%);padding:10px;}
 #cropper-board .bm-adjust-crop-actions .bm-crop-adjust{margin-bottom:10px;}
 #cropper-board .bm-adjust-crop-actions .bm-crop-adjust:last-child{margin-bottom:0;}
